[package]
name = "hdwallet"
version = "0.1.0"
authors = ["kaz <knman7@hotmail.com>"]
edition = "2018"

[dependencies]
rand = "0.8.3"
hex = "0.4.3"
log = "0.4.14"
env_logger = "0.8.3"
ring = "0.16"
secp256k1 = "0.20.2"
ripemd160 = "0.9.1"
bs58 = "0.4.0"
sha256 = "1.0.2"
aes = "0.7.4"
block-modes = "0.8.1"
bytebuffer = "0.2.1"
rocket = "0.4.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.13.0"
rpassword = "5.0.1"

[dependencies.rocket_contrib]
version = "0.4.10"
default-feature = false
features = ["json"]